prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/empty_literal.nut
// EXPECT_ERROR: "empty constant"
let x = ''
